--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "简单项目模板",
   "main": "entry.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd react && webpack-dev-server --progress --colors"
   },
   "author": "shenqingling",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "webpack": "^1.13.1",
+    "webpack-browser-plugin": "^1.0.12",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
