--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "path": "^0.12.7",
+    "pubsub-js": "^1.5.3",
     "react-hot-loader": "^1.3.0",
     "react-router": "^2.6.1",
     "style-loader": "^0.13.1",
