--- a/react/package.json
+++ b/react/package.json
@@ -5,7 +5,8 @@
   "main": "entry.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --progress --colors"
+    "start": "webpack-dev-server --progress --colors",
+    "eslint": "eslint --ext .js component"
   },
   "author": "shenqingling",
   "license": "ISC",
@@ -14,6 +15,9 @@
     "babel-preset-react": "^6.11.1",
     "bootstrap": "^3.3.7",
     "bootstrap-webpack": "0.0.5",
+    "eslint": "^3.4.0",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-react": "^6.2.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "webpack": "^1.13.1",
