1. 添加项目启动自动打开浏览器插件 2. 将react/react-dom/react-router作为外部资源引入

--- a/frame-react/package.json
+++ b/frame-react/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^15.5.3",
     "react-router": "^2.8.1",
     "webpack": "^1.13.2",
+    "webpack-browser-plugin": "^1.0.20",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
