--- a/frame-react/package.json
+++ b/frame-react/package.json
@@ -4,7 +4,9 @@
   "description": "react+webpack+antd",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "rm -rf dist/js && webpack --config webpack.prod.config.js",
+    "rmdist": ""
   },
   "keywords": [
     "react",
@@ -18,6 +20,8 @@
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.3.3",
     "babel-preset-react": "^6.24.1",
+    "express": "^4.15.2",
+    "history": "^2.1.2",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-router": "^2.8.1",
