--- a/frame-react/package.json
+++ b/frame-react/package.json
@@ -16,6 +16,7 @@
   "author": "shenqingling <sql370@qq.com>",
   "license": "ISC",
   "devDependencies": {
+    "antd": "^2.7.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
