--- a/frame-react/package.json
+++ b/frame-react/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^0.28.3",
     "express": "^4.15.2",
     "history": "^2.1.2",
+    "http-proxy-middleware": "^0.17.4",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.7.0",
