--- a/vue-study/00CSR/package.json
+++ b/vue-study/00CSR/package.json
@@ -8,11 +8,16 @@
   },
   "keywords": [],
   "author": "shenqingling <sql370@qq.com>",
+  "engines": {
+    "node": ">= 8.1.2",
+    "npm": ">= 5.0.3"
+  },
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.4",
     "style-loader": "^0.18.2",
     "vue-loader": "^12.2.1",
     "vue-template-compiler": "^2.3.4",
@@ -21,6 +26,7 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
-    "vue": "^2.3.4"
+    "vue": "^2.3.4",
+    "vue-router": "^2.7.0"
   }
 }
