--- a/vue-study/01Vuex/package.json
+++ b/vue-study/01Vuex/package.json
@@ -9,14 +9,15 @@
   "keywords": [],
   "author": "shenqingling <sql370@qq.com>",
   "engines": {
-    "node": ">= 8.1.2",
-    "npm": ">= 5.0.3"
+    "node": ">= 7.0.0",
+    "npm": ">= 4.0.0"
   },
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.4",
     "style-loader": "^0.18.2",
     "vue-loader": "^12.2.1",
