--- a/vue-study/02SSR/package.json
+++ b/vue-study/02SSR/package.json
@@ -15,6 +15,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
@@ -23,6 +24,7 @@
     "style-loader": "^0.18.2",
     "vue-loader": "^12.2.1",
     "vue-template-compiler": "^2.3.4",
+    "vuex-router-sync": "^4.2.0",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   },
